crates/pg_syntax/tests/snapshots/postgres_regress/regex@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('llmmmfff', '^(l*?){1,1}(.*)(f*)$');"
---
SelectStmt@0..58
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    FuncCall@7..56
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..32
        Sconst@22..32 "'llmmmfff'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..56
        Sconst@34..56 "'^(l*?){1,1}(.*)(f*)$'"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

