crates/pg_syntax/tests/snapshots/postgres_regress/regex@86.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_matches('llmmmfff', '^(l*?){1,1}?(.*)(f*)$');"
---
SelectStmt@0..59
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..57
    FuncCall@7..57
      Ident@7..21 "regexp_matches"
      Ascii40@21..22 "("
      AConst@22..32
        Sconst@22..32 "'llmmmfff'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..57
        Sconst@34..57 "'^(l*?){1,1}?(.*)(f*)$'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

