crates/pg_syntax/tests/snapshots/postgres_regress/regex@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'a' ~ '()*\\1';"
---
SelectStmt@0..21
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..20
    AExpr@7..20
      AConst@7..10
        Sconst@7..10 "'a'"
      Whitespace@10..11 " "
      Op@11..12 "~"
      Whitespace@12..13 " "
      AConst@13..20
        Sconst@13..20 "'()*\\1'"
  Ascii59@20..21 ";"

