crates/pg_syntax/tests/snapshots/postgres_regress/regex@93.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'xxx' ~ '((.)){0}(\\2)' as f;"
---
SelectStmt@0..35
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    AExpr@7..29
      AConst@7..12
        Sconst@7..12 "'xxx'"
      Whitespace@12..13 " "
      Op@13..14 "~"
      Whitespace@14..15 " "
      AConst@15..29
        Sconst@15..29 "'((.)){0}(\\2)'"
    Whitespace@29..30 " "
    As@30..32 "as"
    Whitespace@32..33 " "
    Ident@33..34 "f"
  Ascii59@34..35 ";"

