crates/pg_syntax/tests/snapshots/postgres_regress/regex@96.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select 'abadef' ~ '^((.)\\2|..)\\2' as f;"
---
SelectStmt@0..39
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..38
    AExpr@7..33
      AConst@7..15
        Sconst@7..15 "'abadef'"
      Whitespace@15..16 " "
      Op@16..17 "~"
      Whitespace@17..18 " "
      AConst@18..33
        Sconst@18..33 "'^((.)\\2|..)\\2'"
    Whitespace@33..34 " "
    As@34..36 "as"
    Whitespace@36..37 " "
    Ident@37..38 "f"
  Ascii59@38..39 ";"

