crates/pg_syntax/tests/snapshots/postgres_regress/regex@98.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_match('xyz', '.|...');"
---
SelectStmt@0..36
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..34
    FuncCall@7..34
      Ident@7..19 "regexp_match"
      Ascii40@19..20 "("
      AConst@20..25
        Sconst@20..25 "'xyz'"
      Ascii44@25..26 ","
      Whitespace@26..27 " "
      AConst@27..34
        Sconst@27..34 "'.|...'"
  Ascii41@34..35 ")"
  Ascii59@35..36 ";"

