crates/pg_syntax/tests/snapshots/postgres_regress/regex@99.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select regexp_match('xy', '.*');"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..30
    FuncCall@7..30
      Ident@7..19 "regexp_match"
      Ascii40@19..20 "("
      AConst@20..24
        Sconst@20..24 "'xy'"
      Ascii44@24..25 ","
      Whitespace@25..26 " "
      AConst@26..30
        Sconst@26..30 "'.*'"
  Ascii41@30..31 ")"
  Ascii59@31..32 ";"

